# resume-mate

./: .env.example  .gitignore  ADVANCED_DSPY_PATTERNS.md  AZURE_SETUP.md  CHANGES_SUMMARY.md  HOW_TO_RUN.md  IMPLEMENTATION_STATUS.md  IMPROVEMENT_ROADMAP.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  TECHNICAL_ARCHITECTURE_DSPY.md  debug_skills.py  install_dependencies.sh  pyproject.toml  requirements.txt  test_imports.py  test_markdown_output.py
.claude/: settings.local.json
data/outputs/: law-optimized.json  law-optimized.md  law-skills-test.json  resume222.json  yunus-optimized.json  yunus-optimized.md  yunus-skills-test.json
data/sample_cvs/: PLACE_RESUME_HERE.txt  README.md
scripts/: extract_cv.py
src/: __init__.py
src/config/: __init__.py  division_config.py  dspy_config.py  settings.py
src/dspy_modules/: __init__.py  achievement_extraction.py  cv_extraction_modules.py  cv_signatures.py  jd_extraction_modules.py  jd_signatures.py  skill_proficiency.py
src/models/: __init__.py  cv_schema.py  evaluation_criteria.py  evidence_field.py  hr_insights.py  jd_schema.py
src/pipelines/: __init__.py  cv_extraction_pipeline.py  jd_extraction_pipeline.py
src/preprocessing/: __init__.py  document_intelligence.py  pdf_parser.py
